@@ -2,17 +2,21 @@ package org.p2p.solanaj.core;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
+import lombok.Getter;
+import lombok.Setter;
 import org.bitcoinj.core.Base58;
 import org.p2p.solanaj.utils.ShortvecEncoding;
 import org.p2p.solanaj.utils.TweetNaclFast;
 
 /**
  * Represents a Solana transaction.
+ * <p>
  * This class allows for building, signing, and serializing transactions.
+ * It supports both legacy and versioned transactions with Address Lookup Tables (ALTs).
+ * </p>
  */
 public class Transaction {
 
@@ -22,12 +26,18 @@ public class Transaction {
     private final List<String> signatures;
     private byte[] serializedMessage;
 
+    @Getter
+    @Setter
+    private byte version = (byte) 0xFF; // Default to legacy version
+
+    private final List<AddressTableLookup> addressTableLookups = new ArrayList<>();
+
     /**
      * Constructs a new Transaction instance.
      */
     public Transaction() {
         this.message = new Message();
-        this.signatures = new ArrayList<>(); // Use diamond operator
+        this.signatures = new ArrayList<>();
     }
 
     /**
@@ -38,7 +48,7 @@ public class Transaction {
      * @throws NullPointerException if the instruction is null
      */
     public Transaction addInstruction(TransactionInstruction instruction) {
-        Objects.requireNonNull(instruction, "Instruction cannot be null"); // Add input validation
+        Objects.requireNonNull(instruction, "Instruction cannot be null");
         message.addInstruction(instruction);
         return this;
     }
@@ -50,7 +60,7 @@ public class Transaction {
      * @throws NullPointerException if the recentBlockhash is null
      */
     public void setRecentBlockHash(String recentBlockhash) {
-        Objects.requireNonNull(recentBlockhash, "Recent blockhash cannot be null"); // Add input validation
+        Objects.requireNonNull(recentBlockhash, "Recent blockhash cannot be null");
         message.setRecentBlockHash(recentBlockhash);
     }
 
@@ -61,7 +71,7 @@ public class Transaction {
      * @throws NullPointerException if the signer is null
      */
     public void sign(Account signer) {
-        sign(Arrays.asList(Objects.requireNonNull(signer, "Signer cannot be null"))); // Add input validation
+        sign(List.of(Objects.requireNonNull(signer, "Signer cannot be null")));
     }
 
     /**
@@ -86,7 +96,7 @@ public class Transaction {
                 byte[] signature = signatureProvider.detached(serializedMessage);
                 signatures.add(Base58.encode(signature));
             } catch (Exception e) {
-                throw new RuntimeException("Error signing transaction", e); // Improve exception handling
+                throw new RuntimeException("Error signing transaction", e);
             }
         }
     }
@@ -97,13 +107,26 @@ public class Transaction {
      * @return The serialized transaction as a byte array
      */
     public byte[] serialize() {
+        byte[] serializedMessage = message.serialize();
         int signaturesSize = signatures.size();
         byte[] signaturesLength = ShortvecEncoding.encodeLength(signaturesSize);
 
-        // Calculate total size before allocating ByteBuffer
         int totalSize = signaturesLength.length + signaturesSize * SIGNATURE_LENGTH + serializedMessage.length;
+        if (version != (byte) 0xFF) {
+            totalSize += 1; // Add 1 byte for version
+            if (version == 0) {
+                totalSize += ShortvecEncoding.encodeLength(addressTableLookups.size()).length;
+                for (AddressTableLookup lookup : addressTableLookups) {
+                    totalSize += lookup.getSerializedSize();
+                }
+            }
+        }
+
         ByteBuffer out = ByteBuffer.allocate(totalSize);
 
+        if (version != (byte) 0xFF) {
+            out.put(version);
+        }
         out.put(signaturesLength);
 
         for (String signature : signatures) {
@@ -113,6 +136,25 @@ public class Transaction {
 
         out.put(serializedMessage);
 
+        if (version == 0) {
+            byte[] addressTableLookupsLength = ShortvecEncoding.encodeLength(addressTableLookups.size());
+            out.put(addressTableLookupsLength);
+            for (AddressTableLookup lookup : addressTableLookups) {
+                out.put(lookup.serialize());
+            }
+        }
+
         return out.array();
+    }
+
+    /**
+     * Adds an address table lookup to the transaction.
+     *
+     * @param tablePubkey      The public key of the address table
+     * @param writableIndexes  The list of writable indexes
+     * @param readonlyIndexes  The list of readonly indexes
+     */
+    public void addAddressTableLookup(PublicKey tablePubkey, List<Byte> writableIndexes, List<Byte> readonlyIndexes) {
+        addressTableLookups.add(new AddressTableLookup(tablePubkey, writableIndexes, readonlyIndexes));
     }
 }
